
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int hook_functions; int nickname; int offset; int diff; int base; int star; } ;
typedef TYPE_1__ Addresses ;


 int HOOK_FUNCTIONS ;
 int NICKNAME ;
 int STAR ;
 char* make_nickname (TYPE_1__*,int,int) ;
 char* make_raw (TYPE_1__*,char*) ;
 int printf (char*,...) ;

int main(int argc, char **argv) {
 Addresses addrs;
 char *cmd = argv[1];

 addrs.hook_functions = HOOK_FUNCTIONS;
 addrs.nickname = NICKNAME;
 addrs.star = STAR;

 addrs.offset = ((NICKNAME - HOOK_FUNCTIONS) / 20) + 1;
 addrs.diff = 20 - ((NICKNAME - HOOK_FUNCTIONS) % 20);
 addrs.base = NICKNAME + addrs.diff;

 printf(":my_server 001 bleh :a\n");
 printf("%s\n", make_nickname(&addrs, 4, 1));
 printf("%s\n", make_nickname(&addrs, 3, 1));
 printf("%s\n", make_nickname(&addrs, 2, 1));
 printf("%s\n", make_nickname(&addrs, 1, 1));
 printf("%s\n", make_nickname(&addrs, 0, 1));
 printf("%s\n", make_raw(&addrs, cmd));

 return 0;
}
