; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4087.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4087.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32, i32, i32 }

@HOOK_FUNCTIONS = common dso_local global i32 0, align 4
@NICKNAME = common dso_local global i32 0, align 4
@STAR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c":my_server 001 bleh :a\0A\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.TYPE_4__, align 4
  %7 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i8**, i8*** %5, align 8
  %9 = getelementptr inbounds i8*, i8** %8, i64 1
  %10 = load i8*, i8** %9, align 8
  store i8* %10, i8** %7, align 8
  %11 = load i32, i32* @HOOK_FUNCTIONS, align 4
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* @NICKNAME, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* @STAR, align 4
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 5
  store i32 %15, i32* %16, align 4
  %17 = load i32, i32* @NICKNAME, align 4
  %18 = load i32, i32* @HOOK_FUNCTIONS, align 4
  %19 = sub nsw i32 %17, %18
  %20 = sdiv i32 %19, 20
  %21 = add nsw i32 %20, 1
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 2
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* @NICKNAME, align 4
  %24 = load i32, i32* @HOOK_FUNCTIONS, align 4
  %25 = sub nsw i32 %23, %24
  %26 = srem i32 %25, 20
  %27 = sub nsw i32 20, %26
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 3
  store i32 %27, i32* %28, align 4
  %29 = load i32, i32* @NICKNAME, align 4
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 3
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %29, %31
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 4
  store i32 %32, i32* %33, align 4
  %34 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %35 = call i8* @make_nickname(%struct.TYPE_4__* %6, i32 4, i32 1)
  %36 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %35)
  %37 = call i8* @make_nickname(%struct.TYPE_4__* %6, i32 3, i32 1)
  %38 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %37)
  %39 = call i8* @make_nickname(%struct.TYPE_4__* %6, i32 2, i32 1)
  %40 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %39)
  %41 = call i8* @make_nickname(%struct.TYPE_4__* %6, i32 1, i32 1)
  %42 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %41)
  %43 = call i8* @make_nickname(%struct.TYPE_4__* %6, i32 0, i32 1)
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %43)
  %45 = load i8*, i8** %7, align 8
  %46 = call i8* @make_raw(%struct.TYPE_4__* %6, i8* %45)
  %47 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %46)
  ret i32 0
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i8* @make_nickname(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i8* @make_raw(%struct.TYPE_4__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
